[package]
name = "quork"
version = "0.2.1"
license = "MIT"
description = "A collection of small things that don't deserve their own crate"
keywords = ["admin", "sys"]
categories = ["os", "os::unix-apis", "os::windows-apis"]
authors = ["Juliette Cordor"]
documentation = "https://docs.rs/quork"
repository = "https://github.com/jewlexx/quork.git"
homepage = "https://github.com/jewlexx/quork.git"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["quork-proc"]

[dependencies]
quork-proc = { version = "0.1", path = "quork-proc", optional = true }
spin = { version = "0.9", optional = true }
parking_lot = { version = "0.12", optional = true }
thiserror = { version = "1.0.39", optional = true }
cfg-if = "1.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.46.0", features = ["Win32_Networking_NetworkListManager", "Win32_System_Com", "Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }

[target.'cfg(unix)'.dependencies]
nix = "0.26.2"

[features]
default = ["all"]
all = ["macros", "root", "traits", "network"]
network = []
root = []
traits = []
macros = ["quork-proc"]

[build-dependencies]
cc = "1.0.79"

[dev-dependencies]
is-root = "0.1.2"
