[package]
name = "quork"
version = "0.6.2"
license = "MIT OR Apache-2.0"
description = "A collection of small things that don't deserve their own crate"
keywords = ["admin", "sys", "windows", "network", "linux"]
categories = ["os", "os::unix-apis", "os::windows-apis", "development-tools"]
authors = ["Juliette Cordor"]
documentation = "https://docs.rs/quork"
repository = "https://github.com/jewlexx/quork.git"
homepage = "https://github.com/jewlexx/quork.git"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["quork-proc"]

[dependencies]
quork-proc = { version = "0.3", path = "quork-proc", optional = true }
spin = { version = "0.9", optional = true }
lock_api = { version = "0.4", optional = true }
thiserror = { version = "1.0" }
cfg-if = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51", features = [
    "Win32_Networking_NetworkListManager",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user"] }

[features]
default = ["all"]
all = ["macros", "root", "traits", "network"]
network = []
root = []
traits = []
macros = ["quork-proc"]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
is-root = "0.1"
