[package]
name = "quork-proc"
description = "The proc macros for quork"
license = "MIT"
version = "0.1.1"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.21"
syn = { version = "1.0.96", features = ["full"] }
