[package]
name = "quork-proc"
description = "The proc macros for quork (not intended for independant use)"
license = "MIT"
version = "0.1.3"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
