[package]
name = "quork-proc"
license = "MIT"
version = "0.3.1"
description = "The proc macros for quork (not intended for independant use)"
authors = ["Juliette Cordor"]
documentation = "https://docs.rs/quork"
repository = "https://github.com/jewlexx/quork.git"
homepage = "https://github.com/jewlexx/quork.git"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = { version = "0.4.1", features = ["unicode"] }
proc-macro-crate = "2.0"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
